@@ -1,6 +1,6 @@
 [NAME]
-sync \- flush file system buffers
+sync \- Synchronize cached writes to persistent storage
 [DESCRIPTION]
 .\" Add any additional description here
 [SEE ALSO]
-sync(2)
+fdatasync(2), fsync(2), sync(2), syncfs(2)
